# diskstat

./: .gitignore  README.md  build.ps1  compile_res.ps1  disks.py  hatch_build.py  main.py  program.kra  program.xcf  pyproject.toml  res.qrc  test_keys.py
.github/workflows/: pyinstaller.yml  python-publish.yml
diskstat/: Diskstat.template.ahk  FyneApp.toml  Makefile  __main__.py  autostart.py  bindings.go  disk_test.go  disks.go  disks.py  diskstat-api.go  entry.py  gen.py  go.mod  go.sum  http_show.py  http_stop.py  launcher.py  layout.go  main.go  main.py  mapfunc.go  model.go  program_window.go  program_window.py  res.py  server.go  server.py  server_main.py  stop.py
diskstat/winres/: winres.json
diskstat_api/: Makefile  diskstat-api.go
iterfp/: go.mod  main.go  set.go  set_ops.go  set_test.go
