[project]
name = "diskstat"
version = "2025.1.20.0"
description = "Visualize your disk free space without Windows Explorer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "pydantic>=2.10.5",
    "pyside6>=6.8.0.1",
    "pywin32>=308",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
    "Intended Audience :: End Users/Desktop",
]

[project.urls]
Repository = "https://github.com/soda92/diskstat"

[tool.uv]
dev-dependencies = [
    "build>=1.2.2.post1",
    "twine>=6.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["diskstat"]
include = ["*.ahk", "*.exe"]

[tool.hatch.build.targets.wheel]
packages = ["diskstat"]
include = ["*.ahk", "*.exe"]

[project.scripts]
diskstat = "diskstat.entry:main"
diskstat-server = "diskstat.server:main"

diskstat-show = "diskstat.http_show:main"
diskstat-stop = "diskstat.http_stop:main"
