[project]
name = "diskstat"
version = "2025.3.18.0"
description = "Visualize your disk free space without Windows Explorer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
    "Intended Audience :: End Users/Desktop",
]

[project.urls]
Repository = "https://github.com/soda92/diskstat"

[tool.uv]
dev-dependencies = ["build>=1.2.2.post1", "hatchling>=1.27.0", "twine>=6.0.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["diskstat", "diskstat_api"]
exclude = ["__pycache__", "*.pyc", "*.exe", "*.exe~", "*.syso"]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["diskstat"]
exclude = ["__pycache__", "*.pyc", "*.exe~", "*.syso"]

[tool.hatch.build.hooks.custom]

[project.scripts]
diskstat = "diskstat.entry:main"
diskstat-server = "diskstat.server:main"
diskstat-console = "diskstat.disks:main_console"
